<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/landscape"
    android:gravity="bottom">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:useDefaultMargins="true"
        tools:ignore="UselessParent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white_transparent"
            android:text="@string/key_1"
            android:textColor="@color/red"
            android:textSize="@dimen/in_sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white_transparent"
            android:text="@string/key_2"
            android:textColor="@color/black"
            android:textSize="@dimen/in_sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white_transparent"
            android:text="@string/key_3"
            android:textColor="@color/black"
            android:textSize="@dimen/in_sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/yellow_transparent"
            android:text="@string/key_4"
            android:textColor="@color/black"
            android:textSize="@dimen/in_sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white_transparent"
            android:text="@string/key_5"
            android:textColor="@color/black"
            android:textSize="@dimen/in_sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white_transparent"
            android:text="@string/key_6"
            android:textColor="@color/black"
            android:textSize="@dimen/in_sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white_transparent"
            android:text="@string/key_7"
            android:textColor="@color/black"
            android:textSize="@dimen/in_sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/yellow_transparent"
            android:text="@string/key_8"
            android:textColor="@color/black"
            android:textSize="@dimen/in_sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white_transparent"
            android:text="@string/key_9"
            android:textColor="@color/black"
            android:textSize="@dimen/in_sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white_transparent"
            android:text="@string/key_10"
            android:textColor="@color/black"
            android:textSize="@dimen/in_sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white_transparent"
            android:text="@string/key_11"
            android:textColor="@color/black"
            android:textSize="@dimen/in_sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/yellow_transparent"
            android:text="@string/key_12"
            android:textColor="@color/black"
            android:textSize="@dimen/in_sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white_transparent"
            android:text="@string/key_13"
            android:textColor="@color/black"
            android:textSize="@dimen/in_sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white_transparent"
            android:text="@string/key_14"
            android:textColor="@color/black"
            android:textSize="@dimen/in_sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white_transparent"
            android:text="@string/key_15"
            android:textColor="@color/black"
            android:textSize="@dimen/in_sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/yellow_transparent"
            android:text="@string/key_16"
            android:textColor="@color/black"
            android:textSize="@dimen/in_sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white_transparent"
            android:text="@string/key_17"
            android:textColor="@color/black"
            android:textSize="@dimen/in_sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white_transparent"
            android:text="@string/key_18"
            android:textColor="@color/black"
            android:textSize="@dimen/in_sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/green_transparent"
            android:text="@string/key_19"
            android:textColor="@color/white"
            android:textSize="@dimen/in_sp"
            android:textStyle="bold" />

    </GridLayout>

</LinearLayout>